--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calculate_extent)
 export(download_file)
 export(invert_rank)
 export(invert_this)
+export(keep_na)
 export(normalise_rank)
 export(quantise)
 export(standardise)
