Add positional normalisation function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(invert_rank)
 export(invert_this)
 export(keep_na)
 export(normalise_rank)
+export(positional_normalisation)
 export(quantise)
 export(standardise)
