--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,9 @@ URL: https://github.com/britishredcrosssociety/compositr
 BugReports: https://github.com/britishredcrosssociety/compositr/issues
 Encoding: UTF-8
 LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
+    "roxyglobals::global_roclet"))
+RoxygenNote: 7.3.2
 Imports:
     stats,
     dplyr,
@@ -22,3 +23,7 @@ Imports:
     classInt,
     httr2,
     tidyr
+Suggests: 
+    roxyglobals
+Config/roxyglobals/filename: globals.R
+Config/roxyglobals/unique: FALSE
