--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,7 @@ Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
     "roxyglobals::global_roclet"))
 RoxygenNote: 7.3.2
 Imports:
-    stats,
-    dplyr,
-    httr2,
-    tidyr
+    stats
 Suggests: 
     roxyglobals
 Config/roxyglobals/filename: globals.R
