--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 export(invert_rank)
 export(invert_this)
-export(normalise_rank)
-export(positional_normalisation)
+export(normalise_mean)
+export(normalise_median)
+export(normalise_ranks_01)
 export(quantise)
-export(standardise)
 export(transform_exp)
