--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,12 @@ Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
     "roxyglobals::global_roclet"))
 RoxygenNote: 7.3.2
 Imports:
+    dplyr,
     stats
 Suggests: 
-    roxyglobals
+    roxyglobals,
+    tibble
 Config/roxyglobals/filename: globals.R
 Config/roxyglobals/unique: FALSE
+Depends: 
+    R (>= 2.10)
