Add missing dep

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
 RoxygenNote: 7.3.2
 Imports:
     dplyr,
+    rlang,
     stats,
     tidyr
 Suggests: 
