--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,10 @@ Imports:
     tidyr
 Suggests: 
     roxyglobals,
+    testthat (>= 3.0.0),
     tibble
 Config/roxyglobals/filename: globals.R
 Config/roxyglobals/unique: FALSE
 Depends: 
     R (>= 2.10)
+Config/testthat/edition: 3
